--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sprinting-software
 
-baseurl: /
-url: https://stanimirovv.github.io/pages-jekyll-test/
+baseurl: /pages-jekyll-test
+url: https://stanimirovv.github.io/
 
 
 # Build settings
