--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sprinting-software
 
-baseurl: /pages-jekyll-test
+baseurl: pages-jekyll-test/
 url: https://stanimirovv.github.io/
 
 
